--- a/app/frontend/src/styles/globals.css
+++ b/app/frontend/src/styles/globals.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  -webkit-font-smoothing: antialiased;
+button {
+  cursor: pointer;
 }
-
+a {
+  color: inherit;
+  text-decoration: none;
+}
